--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "my-bot",
+  "name": "wibu-vietnam",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
+  "description": "My First Discord Bot",
+  "main": "bot.js",
+  "author": "Shabi",
   "dependencies": {
-    "bufferutil": "^4.0.0",
-    "cheerio": "^1.0.0-rc.3",
-    "discord.js": "^11.5.1",
-    "google-images": "^2.1.0",
-    "moment": "^2.24.0",
-    "peer": "^0.2.10",
-    "request": "^2.88.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.9"
+    "canvas": "^2.6.1",
+    "define-properties": "^1.1.3",
+    "discord.js": "^11.6.4",
+    "es-abstract": "^1.17.6",
+    "fs": "0.0.1-security",
+    "ms": "^2.1.2",
+    "node-superfetch": "^0.1.10",
+    "path": "^0.12.7",
+    "process": "^0.11.10",
+    "request": "^2.88.2",
+    "simple-youtube-api": "^5.2.1",
+    "superagent": "^6.0.0",
+    "ytdl-core": "^3.2.0"
   }
 }
